// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`random.sql > line 14 1`] = `
[
  "SELECT r, count(*)
FROM (SELECT random() r FROM generate_series(1, 1000)) ss
GROUP BY r HAVING count(*) > 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeFunction": {
                            "functions": [
                              {
                                "List": {
                                  "items": [
                                    {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 1,
                                              },
                                              "location": 64,
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 1000,
                                              },
                                              "location": 67,
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "generate_series",
                                            },
                                          },
                                        ],
                                        "location": 48,
                                      },
                                    },
                                    {},
                                  ],
                                },
                              },
                            ],
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 32,
                            "name": "r",
                            "val": {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "random",
                                    },
                                  },
                                ],
                                "location": 32,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "r",
                      },
                    },
                  ],
                  "location": 86,
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 95,
                  },
                },
                "location": 104,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 106,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "r",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 53 1`] = `
[
  "SELECT ks_test_uniform_random() OR
       ks_test_uniform_random() OR
       ks_test_uniform_random() AS uniform",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "uniform",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_uniform_random",
                                },
                              },
                            ],
                            "location": 7,
                          },
                        },
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_uniform_random",
                                },
                              },
                            ],
                            "location": 42,
                          },
                        },
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_uniform_random",
                                },
                              },
                            ],
                            "location": 77,
                          },
                        },
                      ],
                      "boolop": "OR_EXPR",
                      "location": 32,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 60 1`] = `
[
  "SELECT r, count(*)
FROM (SELECT random_normal() r FROM generate_series(1, 1000)) ss
GROUP BY r HAVING count(*) > 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeFunction": {
                            "functions": [
                              {
                                "List": {
                                  "items": [
                                    {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 1,
                                              },
                                              "location": 71,
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 1000,
                                              },
                                              "location": 74,
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "generate_series",
                                            },
                                          },
                                        ],
                                        "location": 55,
                                      },
                                    },
                                    {},
                                  ],
                                },
                              },
                            ],
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 32,
                            "name": "r",
                            "val": {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "random_normal",
                                    },
                                  },
                                ],
                                "location": 32,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "r",
                      },
                    },
                  ],
                  "location": 93,
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 102,
                  },
                },
                "location": 111,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 113,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "r",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 66 1`] = `
[
  "SELECT r, count(*)
FROM (SELECT random_normal(10, 0) r FROM generate_series(1, 100)) ss
GROUP BY r",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeFunction": {
                            "functions": [
                              {
                                "List": {
                                  "items": [
                                    {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 1,
                                              },
                                              "location": 76,
                                            },
                                          },
                                          {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 100,
                                              },
                                              "location": 79,
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "generate_series",
                                            },
                                          },
                                        ],
                                        "location": 60,
                                      },
                                    },
                                    {},
                                  ],
                                },
                              },
                            ],
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 32,
                            "name": "r",
                            "val": {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 46,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {},
                                      "location": 50,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "random_normal",
                                    },
                                  },
                                ],
                                "location": 32,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "r",
                      },
                    },
                  ],
                  "location": 97,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "r",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 99 1`] = `
[
  "SELECT ks_test_normal_random() OR
       ks_test_normal_random() OR
       ks_test_normal_random() AS standard_normal",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "standard_normal",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_normal_random",
                                },
                              },
                            ],
                            "location": 7,
                          },
                        },
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_normal_random",
                                },
                              },
                            ],
                            "location": 41,
                          },
                        },
                        {
                          "FuncCall": {
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "ks_test_normal_random",
                                },
                              },
                            ],
                            "location": 75,
                          },
                        },
                      ],
                      "boolop": "OR_EXPR",
                      "location": 31,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 107 1`] = `
[
  "SELECT random() FROM generate_series(1, 10)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 37,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 40,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 21,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "random",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 112 1`] = `
[
  "SET extra_float_digits = -1",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 25,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "extra_float_digits",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`random.sql > line 114 1`] = `
[
  "SELECT random_normal() FROM generate_series(1, 10)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 44,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 47,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 28,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "random_normal",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
